--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5"
@@ -25,7 +25,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.6",
+    "eslint-config-next": "^15.5.9",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
     "typescript": "^5"
