--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "cloudflare:setup:free": "node app/scripts/setup-cloudflare-free.mjs",
-    "cloudflare:test": "node app/scripts/test-cloudflare-api.mjs"
+    "cloudflare:test": "node app/scripts/test-cloudflare-api.mjs",
+    "test:bot": "node test-bot-detection.mjs"
   },
   "dependencies": {
     "axios": "^1.13.1",
